Radium with import {StyleRoot} to work with @media query

--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -11,3 +11,13 @@
 .Person input {
     width: 300px;
 }
+
+@media (max-width: 550px) {
+    .Person {
+        width: 90%;
+    }
+
+    .Person input {
+        width: 70%;
+    }
+}
